--- a/ecotrack/src/Pages/LoginForm/LoginForm.css
+++ b/ecotrack/src/Pages/LoginForm/LoginForm.css
@@ -1,11 +1,4 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-  }
-  
-  body {
-  margin: 0;
+ .login-page {
     font-family:'Poppins', sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
@@ -14,9 +7,9 @@
     align-items: center;
     min-height: 100vh;
     background-color: rgba(43, 54, 116, 0.2);
-  }
-  
-  .loginwrapper {
+ }
+ 
+ .loginwrapper {
       width: 450px;
       background: rgba(238, 238, 238, 1);
       border-radius: 10px;
