--- a/ecotrack/src/Pages/SignUpForm/SignUpForm.css
+++ b/ecotrack/src/Pages/SignUpForm/SignUpForm.css
@@ -2,20 +2,18 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-  }
-  
-  body {
-  margin: 0;
     font-family:'Poppins', sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+  }
+
+.signup-page {
     display: flex;
     justify-content: center;
     align-items: center;
     min-height: 100vh;
     background-color: rgba(43, 54, 116, 0.2);
-  }
-
+}
 
 .signup-container {
     width: 450px;
