--- a/ecotrack/src/Pages/Dashboard/Dashboard.scss
+++ b/ecotrack/src/Pages/Dashboard/Dashboard.scss
@@ -4,5 +4,15 @@
     .dashboardContainer {
         background-color: rgba(239, 244, 251, 1);
         flex: 6;
+
+        .widgets, .charts{
+            display: flex;
+            padding: 20px;
+            gap: 20px;
+        }
+
+        .charts{
+            padding: 5px 20px;
+        }
     }
 }
