--- a/ecotrack/src/Pages/Dashboard/Dashboard.scss
+++ b/ecotrack/src/Pages/Dashboard/Dashboard.scss
@@ -14,5 +14,18 @@
         .charts{
             padding: 5px 20px;
         }
+
+        .listContainer {
+            -webkit-box-shadow: -2px 7px 18px -8px #000000; 
+            box-shadow: -2px 7px 18px -8px #000000;
+            padding: 20px;
+            margin: 20px;
+
+            .listTitle{
+                font-weight: 500;
+                color: gray;
+                margin-bottom: 15px;
+            }
+        }
     }
 }
