--- a/ecotrack/src/Components/Featured/Featured.scss
+++ b/ecotrack/src/Components/Featured/Featured.scss
@@ -10,10 +10,11 @@
         align-items: center;
         justify-content: space-between;
         color: rgba(43, 54, 116, 1);
+        
 
         .title{
             font-size: 16px;
-            font-weight: 500;
+            font-weight: bold;
         }
     }
 
