--- a/ecotrack/src/Components/Table/Table.scss
+++ b/ecotrack/src/Components/Table/Table.scss
@@ -1,4 +1,7 @@
 .table{
+    .tableRow{
+        background-color:(rgba(43, 54, 116, 1)) 
+    }
     .status{
         padding: 5px;
         border-radius: 5px;
