--- a/ecotrack/src/Components/Datatable/Datatable.scss
+++ b/ecotrack/src/Components/Datatable/Datatable.scss
@@ -1,11 +1,17 @@
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap');
+
 .datatable{
     height: 600px;
-    padding: 20px;
-
+    padding: 20px;  
+    
+    .datagrid{
+        background-color: black;
+    }
+        
     .datatableTitle{
         width: 100%;
         font-size: 24px;
-        color: gray;
+        color: rgba(43, 54, 116, 1);
         margin-bottom: 10px;
         display: flex;
         align-items: center;
@@ -14,7 +20,7 @@
         .link{
             text-decoration: none;
             color: rgb(21, 0, 128);
-            font-size: 16px;
+            font-size: 15px;
             font-weight: 400;
             border: 1px solid rgb(21, 0, 128);
             padding: 5px;
@@ -26,6 +32,7 @@
     .cellWithTable{
         display: flex;
         align-items: center;
+        
     }
 
     .cellAction{
