--- a/ecotrack/src/Pages/NewPage/NewPage.scss
+++ b/ecotrack/src/Pages/NewPage/NewPage.scss
@@ -44,7 +44,7 @@
                         align-items: center;
                         gap: 10px;
                         margin-bottom: 5px;
-                        color: rgba(43, 54, 116, 1);
+                        color: rgb(84, 107, 234);
                     }
 
                     input{
