--- a/ecotrack/src/Components/Sidebar/Sidebar.scss
+++ b/ecotrack/src/Components/Sidebar/Sidebar.scss
@@ -1,6 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap');
+
 
 .sidebar {
+    font-family: "Raleway", sans-serif;
     background-color: #FFFFFF;
     flex: 1;
     border-right: 0.5px solid rgba(255, 255, 255, 1);
@@ -62,6 +64,7 @@
             }
 
             .custom-link{
+                text-decoration: none;
                 color: black;
             }
         }
