--- a/ecotrack/src/Pages/Dashboard/Dashboard.scss
+++ b/ecotrack/src/Pages/Dashboard/Dashboard.scss
@@ -1,4 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap');
+
 .dashboard {
+    font-family: "Raleway", sans-serif;
     display: flex;
 
     .dashboardContainer {
