--- a/ecotrack/src/Components/Datatable/Datatable.scss
+++ b/ecotrack/src/Components/Datatable/Datatable.scss
@@ -3,7 +3,9 @@
 
 .datatable{
     height: 600px;
-    padding: 20px;  
+    padding: 10px;
+    box-sizing: border-box;
+    flex: 1 0 auto;
 
     .MuiSvgIcon-root {
         color: gray;
@@ -17,11 +19,15 @@
         color: black;
     }
 
-    .MuiDataGrid-filler{
-        display: none;
-    }
-
-
+    .datagrid {
+        width: 100%;
+        height: 600px; 
+        
+        @media (max-width: 768px) {
+            height: auto; 
+            font-size: 12px; 
+        }
+}
         
     .datatableTitle{
         font-family: "Raleway", sans-serif;
