--- a/ecotrack/src/Components/Navbar/Navbar.scss
+++ b/ecotrack/src/Components/Navbar/Navbar.scss
@@ -17,7 +17,7 @@
         .search{
             display: flex;
             align-items: center;
-            border: 0.5px solid lightgrey;
+            border: 2px solid lightgrey;
             padding: 3px;
             border-radius: 100px;
 
@@ -43,13 +43,15 @@
 
 
                 .nav-icon{
-                    font-size: 20px;
+                    font-size: 21px;
+                    cursor: pointer;
                 }
 
                 .avatar{
                     width: 40px;
                     height: 40px;
                     border-radius: 50%;
+                    cursor: pointer;
                 }
             }
         }
