--- a/ecotrack/src/style/dark.scss
+++ b/ecotrack/src/style/dark.scss
@@ -21,6 +21,28 @@
         }
     }
 
+    .navbar {
+        .nav-wrapper {
+            .search {
+                input{
+                    color: white;
+                }
+            }
+        }
+    }
+
+    .dropdown {
+        background-color: #333;
+        color: #F9F6EE;
+    }
+
+    .dropdown::before{
+        background-color: #333;
+    }
+
+   
+
+
     //Sidebar 
     .sidebar{
         background-color: rgba(30, 30, 30, 1) ;
