--- a/ecotrack/src/Pages/Dashboard/Dashboard.scss
+++ b/ecotrack/src/Pages/Dashboard/Dashboard.scss
@@ -3,18 +3,15 @@
 .dashboard {
     font-family: "Raleway", sans-serif;
     display: flex;
+    
 
     .dashboardContainer {
         flex: 6;
 
-        .widgets, .charts{
+        .first-layer, .charts{
             display: flex;
             padding: 20px;
-            gap: 20px;
-        }
-
-        .charts{
-            padding: 5px 20px;
+            gap: 20px;  
         }
 
         .listContainer {
