--- a/ecotrack/src/Pages/Dashboard/Dashboard.scss
+++ b/ecotrack/src/Pages/Dashboard/Dashboard.scss
@@ -7,6 +7,7 @@
 
     .dashboardContainer {
         flex: 6;
+        background-color: #EFF4FB;
 
         .first-layer, .charts{
             display: flex;
