--- a/ecotrack/src/Components/Navbar/Navbar.scss
+++ b/ecotrack/src/Components/Navbar/Navbar.scss
@@ -8,52 +8,76 @@
 
     .nav-wrapper{
         width: 100%;
+        height: 5em;
         padding: 20px;
         display: flex;
         align-items: center;
         justify-content: space-between;
 
 
-        .search{
-            display: flex;
-            align-items: center;
-            border: 2px solid lightgrey;
-            padding: 3px;
-            border-radius: 100px;
-
-            input{
-                border: none;
-                outline: none;
-                background-color: transparent;
-
-                &::placeholder{
-                    font-size: 12px;
-                }
-            }
-        }
+       
+        
 
         .items{
             display: flex;
             align-items: center;
+            width:20em;
+        }
 
+            
             .item{
                 display: flex;
                 align-items: center;
                 margin-right: 25px;
+                width: 30px;
+                height: 25px;
+                         
+            }
 
+            .item1{
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                margin-right: 25px;
+                width: 45px;
+                height: 30px;
+                background-color:#2B3674;  
+                border-radius: 20px;            
+            }
 
+    
                 .nav-icon{
-                    font-size: 21px;
+                    color: #A3AED0;
+                    font-size: 23px;
                     cursor: pointer;
                 }
-
+                
                 .avatar{
                     width: 40px;
                     height: 40px;
                     border-radius: 50%;
                     cursor: pointer;
                 }
-            }
+            
         }
+        .line{
+            height:35px;
+            width: 1px;
+            background-color: #191B1F;
+            margin-right: 1.5em;
+        }
+
+        .adminName{
+            width: 10em;
+            height: 4.20em;
+            line-height: 5px;
+        }
+
+        .administrator1{
+            color: #2B3674;
+            font-weight: bold;
+        }
+
+        
+        
     }
-}
