--- a/ecotrack/src/Pages/DisposalPage/Disposal.scss
+++ b/ecotrack/src/Pages/DisposalPage/Disposal.scss
@@ -20,4 +20,11 @@
         align-items: center;
         justify-content: space-between;
     }
+    
 }
+    
+.disposalContent{
+    border:2px solid red;
+    width: 3em;
+    height: 3em;
+  }
