--- a/ecotrack/src/Components/Map/Map.scss
+++ b/ecotrack/src/Components/Map/Map.scss
@@ -1,3 +1,11 @@
-.map {
-    flex: 2;
-}
+.map-container {
+    width: 100%;
+    height: 100%;
+    border: 1px solid red;
+    border-radius: 8px;
+    cursor: pointer;
+    border-radius: 10px;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+    
+  }
+  
