added bg color to pages

--- a/ecotrack/src/Pages/List/List.scss
+++ b/ecotrack/src/Pages/List/List.scss
@@ -9,6 +9,7 @@
         flex-direction: column;
         overflow: hidden;
         box-sizing: border-box;
+        background-color: #EFF4FB;
 
         @media (max-width: 1024px) {
             .list {
