--- a/ecotrack/src/Pages/Report/Report.scss
+++ b/ecotrack/src/Pages/Report/Report.scss
@@ -4,6 +4,7 @@
 
     .reportContainer{
         flex: 6;
+        background-color: #EFF4FB;
 
         .reportTitle{
         padding: 20px;
@@ -18,12 +19,14 @@
         display: flex;
         align-items: center;
         justify-content: space-between;
+        background-color: #EFF4FB;
         }
     }
 
     .cellAction {
         display: flex;
         gap: 15px;
+       
       
         .viewButton {
           color: #3f51b5;
