--- a/ecotrack/src/Pages/Notification/Notification.scss
+++ b/ecotrack/src/Pages/Notification/Notification.scss
@@ -30,7 +30,7 @@
     transition: background-color 0.3s ease, color 0.3s ease;
   
     &.active {
-      background-color: #007BFF;
+      background-color:#2e4374;
       color: #fff;
       border-bottom: 2px solid #007BFF;
     }
